# conveyor_pick_platform

src/nova_description/: CMakeLists.txt  package.xml
src/nova_description/config/: gz_bridge.yaml  nova2_controllers.yaml
src/nova_description/hooks/: ros_gz_nova_description.dsv.in
src/nova_description/launch/: display.launch.py  gazebo.launch.py  world.launch.py
src/nova_description/meshes/nova2/: Link1.dae  Link2.dae  Link3.dae  Link4.dae  Link5.dae  Link6.dae  base_link.dae
src/nova_description/urdf/: Nova2.csv  Nova2.urdf  Nova2.urdf.xacro  nova2.gazebo  nova2.gazebo.xacro
src/nova_description/worlds/: world.sdf
src/nova_gazebo/: CMakeLists.txt  package.xml
src/nova_gazebo/custom_models/container_l/: model.config  model.sdf
src/nova_gazebo/custom_models/container_l/meshes/: container_l.dae
src/nova_gazebo/custom_models/container_m/: model.config  model.sdf
src/nova_gazebo/custom_models/conveyor/: model.config  model.sdf
src/nova_gazebo/custom_models/conveyor/meshes/: conveyor.dae
src/nova_gazebo/custom_models/object/: model.config  model.sdf
src/nova_gazebo/custom_models/object/meshes/: object.dae
src/nova_gazebo/custom_models/platform/: model.config  model.sdf
src/nova_gazebo/custom_models/platform/meshes/: platform.STL  platform.dae
src/nova_gazebo/custom_models/sliding_cube/: model.config  model.sdf
src/nova_gazebo/hooks/: ros_gz_nova_gazebo.dsv.in
src/nova_gazebo/launch/: nova_world.launch.py  spawn_robot.launch.py  test_path.py
src/nova_gazebo/meshes/: container_l.dae  container_m.dae  conveyor.dae  sliding_cube.dae
src/nova_gazebo/worlds/: my_world.sdf  my_world.sdf.xacro  pose_publish.sdf  test2_world.sdf  test_world.sdf
(+6 files in other folders)
