<?xml version="1.0"?>
<package format="3">
  <name>nova_gazebo</name>
  <version>1.0.0</version>
  <description>simulation of muti-arm picking platform</description>
  <maintainer email="david.dudas@outlook.com">David Dudas</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>nova_description</depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>